--- a/iframe.html
+++ b/iframe.html
@@ -68,7 +68,12 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to top frame for connecting dev tools');
-  }</script><style>#root[hidden],
+  }</script><style>.sbdocs.sbdocs-preview {
+        background: #f6f6f6;
+    }
+    .sbdocs.sbdocs-h2 {
+        margin-bottom: 35px; 
+    }</style><style>#root[hidden],
       #docs-root[hidden] {
         display: none !important;
-      }</style></head><body><div id="react-portal"></div><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><pre id="error-message" class="sb-heading"></pre><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><div id="docs-root"></div><script src="runtime~main.9ff5bff0fbdb2c8972de.bundle.js"></script><script src="vendors~main.9ff5bff0fbdb2c8972de.bundle.js"></script><script src="main.9ff5bff0fbdb2c8972de.bundle.js"></script></body></html>
+      }</style></head><body><div id="react-portal"></div><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><pre id="error-message" class="sb-heading"></pre><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><div id="docs-root"></div><script src="runtime~main.23a8169415430e5f8d44.bundle.js"></script><script src="vendors~main.23a8169415430e5f8d44.bundle.js"></script><script src="main.23a8169415430e5f8d44.bundle.js"></script></body></html>
