--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"/><style>html, body {
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -16,4 +16,4 @@
   }</script><style>#root[hidden],
       #docs-root[hidden] {
         display: none !important;
-      }</style></head><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.411d3c3c7829aaabb366.bundle.js"></script><script src="vendors~main.cb20286cec893f47e10e.bundle.js"></script><script src="main.39e270b5406cd36beea3.bundle.js"></script></body></html>
+      }</style></head><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.8bfece81a1ead32e094c.bundle.js"></script><script src="vendors~main.9ba21b3e76dc19a81357.bundle.js"></script><script src="main.39ccd3f3ff532b1ce3f6.bundle.js"></script></body></html>
